--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,5 @@
 
-html{
-    margin: 0px;
-}
-
-
-.carouselExampleFade{
-    margin: 0px;
-    position:fixed ;
-    
-}
-
-
-.centro{
-    text-justify: auto;
-
-}
-
+/**/
 .espacio{
-    margin-top: 200px;
+    padding-top: 150px;
 }
