--- a/css/Style_juegos.css
+++ b/css/Style_juegos.css
@@ -66,17 +66,14 @@
   }
   
   /* Style the buttons */
-  .btn {
+  .btn2 {
     border: none;
     outline: none;
     padding: 12px 16px;
-    background-color: #f1f1f1;
     cursor: pointer;
   }
   
   /* Add a light grey background on mouse-over */
-  .btn:hover {
-    background-color: rgb(148, 248, 255);
-  }
+
 
 
