--- a/apps/modelo/templates/modelo/index.html
+++ b/apps/modelo/templates/modelo/index.html
@@ -198,20 +198,20 @@
     <div class="container  ">      
         <div class="row justify-content-around m-2  ">
           <div class="col-xs-12  col-md-3 col-lg-3 text-center shadow px-2 mb-4  ">
-              <img src="imagen/2.jpg" class="img-fluid " alt="">
+              <img src="imagen/juegos/xb_1.jpeg" class="img-fluid " alt="">
               <h4 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
               <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p> 
               
           </div>
 
           <div class="col-xs-12  col-md-3 col-lg-3   text-center shadow px-2 mb-4  ">
-            <img src="imagen/2.jpg" class="img-fluid" alt="">
+            <img src="imagen/juegos/P4_3.jpg" class="img-fluid" alt="">
             <h4 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
             <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>      
           </div>
 
           <div class="col-xs-12 col-md-3 col-lg-3  text-center shadow px-2 mb-4  ">
-            <img src="imagen/2.jpg" class="img-fluid" alt="">
+            <img src="imagen/juegos/Sw_2.jpg" class="img-fluid" alt="">
             <h4 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
             <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>      
           </div>
