--- a/apps/modelo/templates/modelo/CrearCuenta.html
+++ b/apps/modelo/templates/modelo/CrearCuenta.html
@@ -1,53 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ {% extends 'modelo/plantilla.html'%}
+ 
+ {%  load static  %}
+
+
+    {% block nom %}
     <title>CrearCuenta_juegaBuy</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="shortcut icon" href="imagen/Mando ico.png">
-        <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    {% endblock nom %}
 
-<body>
-    <!-- Menu -->
-  <div class="container-fluid navbar bg-dark fixed-top  ">
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark  container">      
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ">         
-          <a class="navbar-brand " href="index.html" ><img src="imagen/Group 1 (1).png" alt="" class="navbar-nav"></a>
-          <li class="nav-item">
-            <a class="nav-link" href="juegos.html">Juegos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="novedades.html">Novedades</a>
-          </li>       
-        </ul>
-      </div>
 
-      <!-- Buscador -->
-      <div class="mr-2">
-          <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-search m-2 text-white  " fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-          </svg>
-      </div>
-      <!-- Carrito -->
-      <div class="mr-2">
-        <a class="navbar-brand " href="#"><i class="fas fa-shopping-cart text-white" ></i></i></a>
-      </div>
-        
-    </nav>
-    </div>
-  </div>
-
+{% block main %}
+    
 <!-- Formulario crear cuenta -->
   <div class="container-fluid espacio">      
     <div class="container col-md-9 shadow p-4 mb-4">
@@ -126,11 +89,5 @@
           </form>
     </div>
   </div>
-          <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="https://kit.fontawesome.com/1dbd616d3c.js" crossorigin="anonymous"></script>
-</body>
-</html>
+
+  {% endblock main %}
