Vista de Carrito de compra

--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -52,7 +52,7 @@
             </div>
             <!-- Carrito -->
             <div class="mr-2">
-                <a class="navbar-brand " href="carrito.html"><i class="fas fa-shopping-cart text-white"
+                <a class="navbar-brand " href="{% url 'Carrito' %}"><i class="fas fa-shopping-cart text-white"
                         type="button"></i></i></a>
             </div>
             <!-- Usuario -->
@@ -149,8 +149,8 @@
 
 
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#">JugaBuy</a>
+        <div class="footer-copyright text-center py-3 text-white">© 2020 Copyright:
+            <a href="#" class="text-success">JugaBuy</a>
         </div>
         <!-- Copyright -->
 
