--- a/apps/modelo/templates/modelo/juegos.html
+++ b/apps/modelo/templates/modelo/juegos.html
@@ -1,108 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{%  extends 'modelo/plantilla.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{% load static %}
+
+    {% block nom %}
     <title>Compra Juegos</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@500&family=Russo+One&display=swap"
-        rel="stylesheet">
-    <link rel="shortcut icon" href="imagen/Mando ico.png">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    {% endblock nom %}
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@500&family=Russo+One&display=swap"rel="stylesheet">
 
-
-</head>
-
-<body>
-    <!-- holamundo!!-->
-    <header>
-        <!-- Menu -->
-        <div class="container-fluid navbar bg-dark fixed-top  ">
-            <nav class="navbar navbar-expand-lg  navbar-dark bg-dark  container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ">
-                        <a class="navbar-brand " href="index.html" ><img src="imagen/Group 1 (1).png" alt="" class="navbar-nav"></a>                               
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Juegos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="novedades.html">Novedades</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- Buscador -->
-                <div class="mr-2">
-                    <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-search m-2 text-white  "
-                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
-                        <path fill-rule="evenodd"
-                            d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
-                    </svg>
-                </div>
-<!-- Carrito -->
-    <div class="mr-2">
-        <a class="navbar-brand " href="carrito.html"><i class="fas fa-shopping-cart text-white" type="button" ></i></i></a>
-    </div>
-                <!-- Usuario -->
-                <div>
-                    <a class="navbar-brand" href="#"><i class="fas fa-user text-white " type="button"
-                            data-toggle="modal" data-target="#staticBackdrop"></i></a>
-                </div>
-            </nav>
-        </div>
-
-        <!-- Modal de Iniciar Sesion -->
-        <div class="modal fade " id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
-            aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog d-flex justify-content-center">
-                <div class="modal-content">
-                    <div class="modal-header bg-dark text-white">
-                        <h5 class="modal-title" id="staticBackdropLabel">Iniciar Sesión</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true" class="text-white">&times;</span>
-                        </button>
-                    </div>
-
-                    <div class="modal-footer d-flex justify-content-center">
-                        <form class=" d-block" method="GET">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1">Correo electrónico</label>
-                                <input placeholder="Pepe001" type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
-
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">contraseña</label>
-                                <input placeholder="contraseña" type="password" class="form-control"
-                                    id="exampleInputPassword1">
-                            </div>
-                            <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Soy un robot</label>
-                            </div>
-                            <a href="perfil.html" type="submit" class="btn btn-dark">Entrar</a>
-                            <div>
-                                <a href="CrearCuenta.html" type="button" target="_blank" class="btn btn-dark mt-4">Crear
-                                    Cuenta</a>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </header>
-
+    {% block main %}
 
     <!--Sub-menu de filtros-->
     <div class=" espacio2 container p-3 mb-2  bg-dark text-white redondear_menu ">
@@ -117,7 +23,7 @@
 
                 <button onclick="filterSelection('all')" type="button" class="btn btn-light d-inline-flex marlr "
                     href="#">
-                    <img class="imagenm" src="imagen/048-tower.svg" width="45px" alt="">
+                    <img class="imagenm" src="{% static 'modelo/imagen/048-tower.svg' %}" width="45px" alt="">
                 </button>
 
                 <button onclick="filterSelection('ps4')" type="button" class="btn btn-light d-inline-flex marlr"
@@ -139,7 +45,7 @@
             <!-- PCPCPCPCPCPCPCPCPCPCPCPCPCPCPC -->
             <div class=" filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class=" Fcarta ">
-                    <img src="imagen/juegos/pc_1.jpeg" class="icarta img-fluid" alt="">
+                    <img src="{% static 'modelo/imagen/juegos/pc_1.jpeg' %}" class="icarta img-fluid" alt="">
                     <h5 class="">Grand Theft Auto V</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -147,7 +53,7 @@
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta ">
-                    <img src="imagen/juegos/pc_2.jpg" class="icarta  img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/pc_2.jpg' %}" class="icarta  img-fluid " alt="">
                     <h5 class="">The Elder Scrolls V: Skyrim</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -156,7 +62,7 @@
 
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta ">
-                    <img src="imagen/juegos/pc_3.jpeg" class="icarta  img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/pc_3.jpeg' %}" class="icarta  img-fluid " alt="">
                     <h5 class="">My Friend Pedro</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -164,7 +70,7 @@
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta ">
-                    <img src="imagen/juegos/pc_4.jpeg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/pc_4.jpeg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Batman: Arkham Collection</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -172,7 +78,7 @@
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta ">
-                    <img src="imagen/juegos/pc_5.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/pc_5.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Dark Souls 3</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -180,7 +86,7 @@
             </div>
             <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta ">
-                    <img src="imagen/juegos/pc_6.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/pc_6.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Dragon Ball FighterZ (Ultimate Edition)</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -191,7 +97,7 @@
             <!-- P4P4P4P4P4P4P4P4PP4P4P4P4P4P4P4P -->
             <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/P4_1.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/P4_1.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">NBA 2K21</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -200,7 +106,7 @@
 
             <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/P4_2.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/P4_2.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Fifa 21</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -209,7 +115,7 @@
 
             <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/P4_3.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/P4_3.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Marvel’s Avengers</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -217,7 +123,7 @@
             </div>
             <div class="filterDiv ps4  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta ">
-                    <img src="imagen/juegos/P4_4.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/P4_4.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Dragon Ball: Kakarot</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -229,7 +135,7 @@
             <!-- SWSWSWSWSWSWSWWSWSWSWSWSWSWSWSWSW -->
             <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-jus px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/Sw_1.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/Sw_1.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Minecraft Dungeons: Hero Edition</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -237,7 +143,7 @@
             </div>
             <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/Sw_2.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/Sw_2.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Zelda breath of the wild</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -245,7 +151,7 @@
             </div>
             <div class="filterDiv sw  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/Sw_3.jpg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/Sw_3.jpg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Super Mario 3D All-Stars NSW</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -256,7 +162,7 @@
             <!-- XBXBXBXBXBXBXBXBXBXBXBXBXBXBXBBXB -->
             <div class="filterDiv xb  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/xb_1.jpeg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/xb_1.jpeg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Borderlands (GOTY)</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -264,7 +170,7 @@
             </div>
             <div class="filterDiv xb  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="imagen/juegos/xb_2.jpeg" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/xb_2.jpeg' %}" class="icarta img-fluid " alt="">
                     <h5 class="">Gears of War 3</h5>
                     <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
@@ -275,73 +181,6 @@
 
         </div>
     </div>
-
-    <!--Fin del sub-menu de filtros-->
-
-
-    <!-- Footer -->
-    <footer class="bg-dark container-fluid ">
-        <!-- Footer Links -->
-        <div class="container ">
-            <!-- Grid row -->
-            <div class="row bg-dark ml-5 ">
-                <!-- Grid column -->
-                <div class="col-md-4  my-5 ">
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#" class="text-white">Contactanos</a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-white">Seguimiento de ordenes</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Grid column -->
-                <div class="col-md-4 my-5 ">
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#" class="text-white">Preguntas Frecuentes</a>
-                        </li>
-                        <li>
-                            <a href="#" class="text-white">Nos recomiendan</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- redes Sociales -->
-                <div class="col-md-4 my-5">
-                    <div class="text-center ">
-                        <a class="navbar-brand text-white" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="navbar-brand text-white" href="#"><i class="fab fa-instagram"></i></a>
-                        <a class="navbar-brand text-white" href="#"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="#">JugaBuy</a>
-        </div>
-        <!-- Copyright -->
-
-    </footer>
-    <!-- Footer -->
-
-
-
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/1dbd616d3c.js" crossorigin="anonymous"></script>
 
     <!--JS de los filtros-->
     <script>
@@ -396,6 +235,4 @@
     <!--Fin del JS de los filtros-->
 
 
-</body>
-
-</html>
+    {% endblock main %}
