--- a/apps/modelo/templates/modelo/novedades.html
+++ b/apps/modelo/templates/modelo/novedades.html
@@ -1,93 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% extends 'modelo/plantilla.html' %}
+    
+    {% load static %}
+
+    {% block nom %}
     <title>Novedades</title>
     <link rel="shortcut icon" href="imagen/Mando ico.png">
-        <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    
-</head>
-<body>
-  <!-- holamundo!!-->
-  <!-- Menu -->
-  <div class="container-fluid navbar bg-dark fixed-top  ">
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark  container">      
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>    
+    {% endblock nom %}
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ">         
-          <a class="navbar-brand " href="index.html" ><img src="imagen/Group 1 (1).png" alt="" class="navbar-nav"></a>
-          <li class="nav-item">
-            <a class="nav-link " href="juegos.html">Juegos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="novedades.html">Novedades</a>
-          </li>       
-        </ul>
-      </div>
-
-      <!-- Buscador -->
-      <div class="mr-2">
-          <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-search m-2 text-white  " fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
-            <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
-          </svg>
-      </div>
-          <!-- Carrito -->
-          <div class="mr-2">
-            <a class="navbar-brand " href="carrito.html"><i class="fas fa-shopping-cart text-white" type="button" ></i></i></a>
-          </div>
-      <!-- Usuario -->
-      <div  >
-        <a class="navbar-brand" href="#"><i class="fas fa-user text-white "  type="button" data-toggle="modal" data-target="#staticBackdrop" ></i></a>        
-      </div>          
-    </nav>
-  </div>
-
-  <!-- Modal de Iniciar Sesion -->
-  <div class="modal fade " id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog d-flex justify-content-center">
-      <div class="modal-content">
-        <div class="modal-header bg-dark text-white">
-          <h5 class="modal-title" id="staticBackdropLabel">Iniciar Sesión</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true" class="text-white">&times;</span>
-          </button>
-        </div>
-     
-        <div class="modal-footer d-flex justify-content-center">
-          <form class=" d-block" method="GET">
-            <div class="form-group">
-              <label  for="exampleInputEmail1">Correo electrónico</label>
-              <input placeholder="Pepe001" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">contraseña</label>
-              <input placeholder="contraseña" type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Soy un robot</label>
-            </div>
-            <a href="perfil.html" type="submit" class="btn btn-dark">Entrar</a>
-            <div>
-              <a href="CrearCuenta.html"" type="button" target="_blank" class="btn btn-dark mt-4">Crear Cuenta</a>
-            </div>
-          </form>
-        </div> 
-      </div>
-    </div>
-  </div>
-  
  
-  
+    {% block main %}
   <!--texto inicio  -->
   <div class="container  ">    
     <div class="row justify-content-center">
@@ -116,7 +38,7 @@
       <!--primera fila Recien llegados -->
       <div class="row justify-content-around m-2 d-sm-inline-flex">
         <div class="col-xs-12  col-md-6 col-lg-6 text-center shadow px-2 py-4  ">
-          <img src="imagen/amnesia.jpg" class="img-fluid " alt="">
+          <img src="{% static 'modelo/imagen/amnesia.jpg' %}" class="img-fluid " alt="">
           <h5 class="mt-3">Amnesia: Rebirth llegará el 20 de octubre a PS4 y PC</h5>
           <p class="lead">El nuevo juego de terror de Frictional Games se estrenará a finales del mes que viene en PS4 y PC. Ya está disponible para su reserva.</p>
           <li>
@@ -124,7 +46,7 @@
           </li>
         </div>
         <div class="col-xs-12  col-md-6 col-lg-6 text-center shadow px-2 py-4  ">
-          <img src="imagen/fall.jpg" class="img-fluid " alt="">
+          <img src="{% static 'modelo/imagen/fall.jpg' %}" class="img-fluid " alt="">
           <h5 class="mt-3">Fall Guys se actualiza con variaciones en las pruebas, mejoras de errores y el Big Yeetus</h5>
           <p class="lead">Ya disponible la actualización de mitad de temporada de Fall Guys, un parche que además de mejorar la estabilidad del juego también incluye nuevos añadidos y cambios en las pruebas.</p>
           <li>
@@ -132,7 +54,7 @@
           </li>
         </div>
         <div class="col-xs-12  col-md-6 col-lg-6 text-center shadow px-2 py-4  ">
-          <img src="imagen/rocket.jpg" class="img-fluid " alt="">
+          <img src="{% static 'modelo/imagen/rocket.jpg' %}" class="img-fluid " alt="">
           <h5 class="mt-3">Rocket League se convertirá en free-to-play el 23 de septiembre</h5>
           <p class="lead">El próximo 23 de septiembre Rocket League pasará a ser gratuito en PS4, Xbox One, PC y Switch. Mañana se actualizará para ir implementando algunos cambios.</p>
           <li>
@@ -140,7 +62,7 @@
           </li>
         </div>
         <div class="col-xs-12  col-md-6 col-lg-6 text-center shadow px-2 py-4  ">
-          <img src="imagen/sonic.jpg" class="img-fluid " alt="">
+          <img src="{% static 'modelo/imagen/sonic.jpg' %}" class="img-fluid " alt="">
           <h5 class="mt-3">Sega presenta el logotipo del 30º aniversario de Sonic</h5>
           <p class="lead">La mascota de la compañía cumple 30 años en 2021 y vendrá acompañado de productos de merchandising además de nuevos juegos.</p>
           <li>
@@ -151,65 +73,12 @@
       </div>
     </div>
   </div>
-
-<!-- Footer -->
-<footer class="bg-dark container-fluid ">
-  <!-- Footer Links -->
-  <div class="container ">
-    <!-- Grid row -->
-    <div class="row bg-dark ml-5 ">
-      <!-- Grid column -->
-      <div class="col-md-4  my-5 ">
-        <ul class="list-unstyled">
-          <li>
-            <a href="#" class="text-white">Contactanos</a>
-          </li>
-          <li>
-            <a href="#" class="text-white" >Seguimiento de ordenes</a>
-          </li>
-        </ul>
-      </div>
-      <!-- Grid column -->
-      <div class="col-md-4 my-5 ">
-        <ul class="list-unstyled">
-          <li>
-            <a href="#" class="text-white">Preguntas Frecuentes</a>
-          </li>
-          <li>
-            <a href="#" class="text-white">Nos recomiendan</a>
-          </li>
-        </ul>
-      </div>
-      <!-- redes Sociales -->
-      <div class="col-md-4 my-5">
-        <div class="text-center " >     
-          <a class="navbar-brand text-white" href="#"><i class="fab fa-facebook-f"></i></a>
-          <a class="navbar-brand text-white" href="#"><i class="fab fa-instagram"></i></a>
-          <a class="navbar-brand text-white" href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% endblock main %}
 
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="#">JugaBuy</a>
-  </div>
-  <!-- Copyright -->
-
-</footer>
-<!-- Footer -->
+  
      
 
 
 
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="https://kit.fontawesome.com/1dbd616d3c.js" crossorigin="anonymous"></script>
-    </body>
-</html>
