--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -36,7 +36,7 @@
                         <a class="nav-link " href="{%  url 'juego'%}">Juegos</a>
                     </li>
                     <li class="nav-item  ">
-                        <a class="nav-link" href="novedades.html">Novedades</a>
+                        <a class="nav-link" href="{%  url 'novedades' %}">Novedades</a>
                     </li>
                 </ul>
             </div>
