cambio de nombre uwu

--- a/apps/modelo/templates/modelo/novedades.html
+++ b/apps/modelo/templates/modelo/novedades.html
@@ -14,8 +14,8 @@
   <div class="container  ">    
     <div class="row justify-content-center">
       <div class="text-center">
-        <h3 class="">Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <h3 class="">.</h3>
+        <p class="lead">.</p>
 
       </div>
     </div>
