--- a/apps/modelo/templates/modelo/juegos.html
+++ b/apps/modelo/templates/modelo/juegos.html
@@ -43,55 +43,7 @@
         <div class="row justify-content-around m-2">
 
             <!-- PCPCPCPCPCPCPCPCPCPCPCPCPCPCPC -->
-            <div class=" filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class=" Fcarta ">
-                    <img src="{% static 'modelo/imagen/juegos/pc_1.jpeg' %}" class="icarta img-fluid" alt="">
-                    <h5 class="">Grand Theft Auto V</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta ">
-                    <img src="{% static 'modelo/imagen/juegos/pc_2.jpg' %}" class="icarta  img-fluid " alt="">
-                    <h5 class="">The Elder Scrolls V: Skyrim</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
 
-            <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/pc_3.jpeg' %}" class="icarta  img-fluid " alt="">
-                    <h5 class="">My Friend Pedro</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta ">
-                    <img src="{% static 'modelo/imagen/juegos/pc_4.jpeg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Batman: Arkham Collection</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta ">
-                    <img src="{% static 'modelo/imagen/juegos/pc_5.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Dark Souls 3</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
-            <div class="filterDiv pc  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
-                <div class="Fcarta ">
-                    <img src="{% static 'modelo/imagen/juegos/pc_6.jpg' %}" class="icarta img-fluid " alt="">
-                    <h5 class="">Dragon Ball FighterZ (Ultimate Edition)</h5>
-                    <p class="parrafo_carta">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
-                </div>
-            </div>
             <!-- PCPCPCPCPCPCPCPCPCPCPCPCPCPCPC -->
 
             <!-- P4P4P4P4P4P4P4P4PP4P4P4P4P4P4P4P -->
@@ -177,11 +129,11 @@
                 </div>
             </div>
 
-<!--for para la vista de los juegos-->>
+<!--for para la vista de los juegos-->
             {% for i in juego %}
             <div class="filterDiv {{i.j_plt}}  col-xs-12  col-md-3 col-lg-3 text-center px-2 mb-4 ">
                 <div class="Fcarta">
-                    <img src="{% static 'modelo/imagen/juegos/{{i.j_port}}' %}" class="icarta img-fluid " alt="">
+                    <img src="{% static 'modelo/imagen/juegos/' %}{{i.j_port}}" class="icarta img-fluid " alt="">
                     <h5 class="">{{i.j_nom}}</h5>
                     <p class="parrafo_carta">{{i.j_desc}}</p>
                     <a  type="button" class="btn btn-dark mb-2" href="#" > Comprar</a>
