--- a/apps/modelo/templates/modelo/CrearCuenta.html
+++ b/apps/modelo/templates/modelo/CrearCuenta.html
@@ -64,22 +64,22 @@
          <div class="form-group col-md-6">
            <label for="inputRegioon">Región</label>
            <select id="inputRegi" class="form-control">
-
              {% for option in region %}
              <option selected> {{ option.desc_reg }}</option>
              {% endfor %}
            </select>
          </div>
 
+
          <div class="form-group col-md-6">
-           <label for="inputState">Ciudad</label>
-           <select id="inputState" class="form-control">
-             <option selected>Choose...</option>
-             <option>...</option>
-             <option>...</option>
-             <option>...</option>
-           </select>
-         </div>
+          <label for="inputRegioon">Ciudad</label>
+          <select id="inputRegi" class="form-control">
+            {% for option in ciudad %}
+            <option selected> {{ option.desc_ciu }}</option>
+            {% endfor %}
+          </select>
+        </div>
+
        </div>
        <div class="form-group ">
          <label for="inputAddress">Dirección</label>
