--- a/apps/modelo/templates/modelo/CrearCuenta.html
+++ b/apps/modelo/templates/modelo/CrearCuenta.html
@@ -17,36 +17,37 @@
      <div>
        <h3 class="mb-4">Crear una Cuenta de JugaBuy</h3>
      </div>
-     <form class="">
+     <form  method="POST">
+      {% csrf_token %}
        <div class="form-row ">
          <div class="form-group col-md-6">
            <label for="inputNombre">Nombre</label>
-           <input type="text" class="form-control" id="inputNombre">
+           <input type="text" class="form-control" id="Nombre">
          </div>
          <div class="form-group col-md-6">
            <label for="inputApellido">Apellidos</label>
-           <input type="text" class="form-control" id="inputApellido">
+           <input type="text" class="form-control" id="Apellido">
          </div>
 
        </div>
        <div class="form-row">
          <div class="form-group col-md-6">
            <label for="inputEmail4">Correo electrónico</label>
-           <input type="email" class="form-control" id="inputEmail4" required>
+           <input type="email" class="form-control" id="Email" required>
          </div>
          <div class="form-group col-md-6">
            <label for="inputDate">Fecha Nacimiento</label>
-           <input type="date" class="form-control" id="inputDate">
+           <input type="date" class="form-control" id="Date">
          </div>
        </div>
        <div class="form-row">
          <div class="form-group col-md-6">
            <label for="inputPassword4">Contraseña</label>
-           <input type="password" class="form-control" id="inputPassword4">
+           <input type="password" class="form-control" id="Password4" maxlength="8" minlength="6">
          </div>
          <div class="form-group col-md-6">
            <label for="inputPassword5">Repetir contraseña</label>
-           <input type="password" class="form-control" id="inputPassword5">
+           <input type="password" class="form-control" id="inputPassword5" maxlength="8" minlength="6">
          </div>
        </div>
        <div class="form-row">
@@ -56,7 +57,7 @@
          </div>
          <div class="form-group col-md-6">
            <label for="phone">Teléfono</label>
-           <input type="tel" class="form-control" name="telefono" id="inputTel" maxlength="9" minlength="9">
+           <input type="tel" class="form-control" name="telefono" id="Tel" maxlength="9" minlength="9">
          </div>
        </div>
 
@@ -83,10 +84,10 @@
        </div>
        <div class="form-group ">
          <label for="inputAddress">Dirección</label>
-         <input type="text" class="form-control" id="inputAddress">
+         <input type="text" class="form-control" id="Address">
        </div>
 
-       <button type="submit" class="btn btn-dark px-4">Registrar</button>
+       <button onclick = "register()" class="btn btn-dark px-4">Registrar</button>
      </form>
    </div>
  </div>
