--- a/apps/modelo/templates/modelo/CrearCuenta.html
+++ b/apps/modelo/templates/modelo/CrearCuenta.html
@@ -47,7 +47,7 @@
          </div>
          <div class="form-group col-md-6">
            <label for="inputPassword5">Repetir contraseña</label>
-           <input type="password" class="form-control" id="inputPassword5" maxlength="8" minlength="6">
+           <input type="password" class="form-control" id="Passwordre" maxlength="8" minlength="6">
          </div>
        </div>
        <div class="form-row">
@@ -87,8 +87,9 @@
          <input type="text" class="form-control" id="Address">
        </div>
 
-       <button onclick = "register()" class="btn btn-dark px-4">Registrar</button>
+
      </form>
+     <button onclick = "register()" class="btn btn-dark px-4">Registrar</button>
    </div>
  </div>
 
