--- a/apps/modelo/templates/modelo/perfil.html
+++ b/apps/modelo/templates/modelo/perfil.html
@@ -46,7 +46,7 @@
 </div>
 </div>
 </div>
-<!--End Banner y Foto de perfil-->
+<!--End Banner y Foto de perfil.-->
 
 <!--Nav-opciones-->
 <div class="container">
