--- a/apps/modelo/templates/modelo/login.html
+++ b/apps/modelo/templates/modelo/login.html
@@ -30,7 +30,7 @@
                     <button type="submit" class="btn btn-dark">Entrar</button>
                 </div>
 
-                <div class="text-center">
+                <div class="text-center mt-3">
                     <a href="{% url 'cuenta' %}"  class="btn btn-dark">Crear Cuenta</a>
                 </div>
 
