ajustes del path

--- a/apps/modelo/templates/modelo/perfil.html
+++ b/apps/modelo/templates/modelo/perfil.html
@@ -30,7 +30,7 @@
                         <img class="rounded-circle" src="{% static 'modelo/imagen/img_perfil/WW.png'%}" alt="...">
                     </div>
                     <div class="infos">
-                        <h2>{{perfil.nom_user}}</h2>
+                        <h2>{{per}}</h2>
                         <div>
                             <button class="btn btn-dark ">Cambiar imagen de perfil</button>
                             <button class="btn btn-dark ">Cambiar imagen de banner</button>
