--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -40,7 +40,7 @@
                     </li>
                     {%  if request.user.is_authenticated  %}
                     <li class="nav-item  ">
-                            <a class="nav-link" href="{%  url 'perfil'%}username={{user.username}}">Perfil</a>
+                            <a class="nav-link" href="{%  url 'perfil'%}">Perfil</a>
                         </li>
                     {%  endif  %}
                 </ul>
@@ -58,7 +58,7 @@
             </div>
             <!-- Carrito -->
             <div class="mr-2">
-                <a class="navbar-brand " href="{% url 'Carrito' %}"><i class="fas fa-shopping-cart text-white"
+                <a class="navbar-brand " href="{% url 'carrito' %}"><i class="fas fa-shopping-cart text-white"
                         type="button"></i></i></a>
             </div>
             <!-- Usuario -->
