entrar al register

--- a/apps/modelo/templates/modelo/login.html
+++ b/apps/modelo/templates/modelo/login.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="text-center mt-3">
-                    <a href="{% url 'cuenta' %}"  class="btn btn-dark">Crear Cuenta</a>
+                    <a href="{% url 'register' %}"  class="btn btn-dark">Crear Cuenta</a>
                 </div>
 
                 <div class="form-group mt-3 text-center">
