Recuperar contraseña listo

--- a/apps/modelo/templates/modelo/password_reset.html
+++ b/apps/modelo/templates/modelo/password_reset.html
@@ -1,7 +1,26 @@
 <!-- <h1>Built-In Login Logout</h1> -->
-<h2>Reset Password</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">submit</button>
-</form>
+{% extends 'modelo/plantilla.html'%}
+{% load crispy_forms_tags %}
+{% crispy form %}
+
+{%  load static  %}
+
+
+{% block nom %}
+<h2>Recuperar contraseña</h2>
+{% endblock nom %}
+
+
+{% block main %}
+
+<div class="container-fluid espacio">      
+    <div class="container col-md-4 shadow p-4 mb-4">
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button class="btn btn-dark px-4" type="submit">Enviar</button>
+        </form>
+    </div>
+</div>
+<br>
+{% endblock main %}
