--- a/apps/modelo/templates/modelo/login.html
+++ b/apps/modelo/templates/modelo/login.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="form-group mt-3 text-center">
-                    <a href="#">¿Olvidaste tu contraseña?</a>
+                    <a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
                 </div>
             </form>
 
