--- a/apps/modelo/templates/modelo/password_reset_confirm.html
+++ b/apps/modelo/templates/modelo/password_reset_confirm.html
@@ -1,8 +1,28 @@
 <!-- <h1>Built-In Login Logout</h1> -->
-<h2>Reset Password</h2>
-<h3>Enter your new password</h3>
-<form class="form" action="" method="POST" enctype="multipart/form-data">
-  {% csrf_token %}
-  {{ form.as_p }}
-<button type="submit" class="btn btn-primary btn-lg btn-block"><i class="icon-lock4"></i> Change Password</button>
-</form>        
+
+{% extends 'modelo/plantilla.html'%}
+{% load crispy_forms_tags %}
+{% crispy form %}
+
+{%  load static  %}
+
+
+
+{% block nom %}
+<h2>Restablecer la contraseña</h2>
+{% endblock nom %}
+
+
+{% block main %}
+<div class="container-fluid espacio">      
+    <div class="container col-md-9 shadow p-4 mb-4">
+      <h2>Restablecer la contraseña</h2>
+      <h5>Introduzca su nueva contraseña</h5>
+      <form class="form" action="" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form|crispy }}
+      <button type="submit" class="btn btn-dark px-4"><i class="icon-lock4"></i> Cambia la contraseña</button>
+      </form>   
+      </div>
+</div>     
+{% endblock main %}
