--- a/apps/modelo/templates/modelo/password_reset_done.html
+++ b/apps/modelo/templates/modelo/password_reset_done.html
@@ -1,4 +1,26 @@
 <!-- <h1>Built-In Login Logout</h1> -->
-<h2>Reset Password</h2>
-<p>We have sended you reset password link on your email. Please Check Your Email.</p>
-<a href="{% url 'login' %}">Back to Login Page</a>
+
+<!DOCTYPE html>
+<html lang="en">
+    {%  load static  %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block nom %}
+    {% endblock nom %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
+    <link rel="stylesheet" href="{% static 'modelo/css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'modelo/css/style.css'%}">
+    <link rel="stylesheet" href="{% static 'modelo/css/Style_juegos.css'%}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+</head>
+  <div class="container-fluid espacio">      
+    <div class="container col-md-9 shadow p-4 mb-4">
+        <h2>Restablecer la contraseña</h2>
+        <p>Le hemos enviado el enlace para restablecer la contraseña en su correo electrónico. Por favor revise su correo electrónico.</p>
+        <a href="{% url 'login' %}">Volver a la página de inicio de sesión</a>
+      </div>
+</div>     
