--- a/apps/modelo/templates/modelo/password_reset_email.html
+++ b/apps/modelo/templates/modelo/password_reset_email.html
@@ -1,13 +1,14 @@
-{% load i18n %}{% autoescape off %}
-{% blocktrans %}Hey, You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
 
-{% trans "Please go to the following page and choose a new password:" %}
+{% load i18n %}{% autoescape off %}
+{% blocktrans %}Hola, estás recibiendo este correo electrónico porque solicitaste un restablecimiento de contraseña para tu cuenta de usuario en {{ site_name }}.{% endblocktrans %}
+
+{% trans "Vaya a la página siguiente y elija una nueva contraseña:" %}
 {% block reset_link %}
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
-{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
+{% trans "Su nombre de usuario, en caso de que lo haya olvidado:" %} {{ user.get_username }}
 
-{% trans "Thanks for using our site!" %}
+{% trans "¡Gracias por usar nuestro sitio!" %}
 
 {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
 
