--- a/apps/modelo/templates/modelo/datos_perfil.html
+++ b/apps/modelo/templates/modelo/datos_perfil.html
@@ -81,13 +81,14 @@
         </div>
 
     </div>
-    <br>
-    <br>
-    <br>
-    <!--End Datos perso-->
+</div>
+<br>
+<br>
+<br>
+<!--End Datos perso-->
 
-    <!--Funciones-->
-    <script type="text/JavaScript">
+<!--Funciones-->
+<script type="text/JavaScript">
         function activarimput(){
             if (document.getElementById('Name').disabled == false)
             {
@@ -113,5 +114,5 @@
 
 
 
-    {{ block.super }}
-    {%   endblock  %}
+{{ block.super }}
+{%   endblock  %}
