--- a/apps/modelo/templates/modelo/datos_perfil.html
+++ b/apps/modelo/templates/modelo/datos_perfil.html
@@ -4,6 +4,33 @@
 {% load static %}
 
 
+{% block imagenbanner %}
+
+    {% if fotos.foto_banner %}
+        <img src="{{fotos.foto_banner.url}}" style="width: 100% ; border-radius: 20px 20px 900px 900px;" alt="">
+
+    {% else %}
+        <img src="{% static 'modelo/imagen/img_perfil/banner-defecto.png'%}" style="width: 100% ; border-radius: 20px 20px 900px 900px;" alt="">
+
+    {% endif %}
+
+{% endblock imagenbanner %}
+
+
+{% block imagenPerfil %}
+
+    {% if fotos.foto_perfil %}
+        <img class="rounded-circle" 
+        src="{{fotos.foto_perfil.url}}" alt="...">
+    {% else %}
+        <img class="rounded-circle" 
+        src="{% static 'modelo/imagen/img_perfil/Snes-mando.png'%}" alt="...">
+    {% endif %}
+                      
+{% endblock imagenPerfil %}
+
+
+
 {% block content %}
 
 <!--Datos perso-->
