--- a/apps/modelo/templates/modelo/plantilla_perfil.html
+++ b/apps/modelo/templates/modelo/plantilla_perfil.html
@@ -20,7 +20,7 @@
 <div class="container db-social separacion">
 
     <div style="border-radius: 20px;">
-        <div class="container text-center img-fluid " style="max-height: 300px;">
+        <div class="container text-center" style="max-height: 300px;">
             {% block imagenbanner %}
 
             {% endblock imagenbanner %}
