--- a/apps/modelo/static/modelo/css/css_perfil/perfil.css
+++ b/apps/modelo/static/modelo/css/css_perfil/perfil.css
@@ -32,6 +32,9 @@ li {
 
 .db-social .image-default img {
     width: 150px;
+    max-height: 150px;
+    max-width: 150px;
+    display: block;
     position: absolute;
     top: -80px;
     left: 0;
@@ -39,6 +42,8 @@ li {
     margin: 0 auto;
     box-shadow: 0 0 0 6px rgba(255,255,255,1);
     z-index: 10;
+    object-fit: cover;
+    object-position: center center;
 }
 .db-social .infos {
     text-align: center;
