Ajuste region model

--- a/apps/modelo/templates/modelo/register.html
+++ b/apps/modelo/templates/modelo/register.html
@@ -60,15 +60,19 @@
                     {{perfilform.us_tel|as_crispy_field}}
                     
                 </div>
-				    <div class="form-group col-md-6">
-                   {{perfilform.id_ciud|as_crispy_field}}
-                  </div>
+				<div class="form-group col-md-6">
+                   {{perfilform.id_reg|as_crispy_field}}
+                  </div>  
+                  
             </div>
 
             <div class="form-row">
-				<div class="form-group col-md-12">
+				<div class="form-group col-md-6">
                    {{perfilform.us_dir|as_crispy_field}}
-                  </div>                  
+                  </div>    
+                 	<div class="form-group col-md-6">  
+                   {{perfilform.id_ciud|as_crispy_field}}
+				   </div>
             </div>
         
   
