--- a/apps/modelo/templates/modelo/plantilla.html
+++ b/apps/modelo/templates/modelo/plantilla.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="{% static 'modelo/css/Style_juegos.css'%}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
-<body>
+<body onload="idpre();">
     <!-- holamundo!!-->
     <!-- Menu -->
     <div class="container-fluid navbar bg-dark fixed-top   ">
@@ -59,8 +59,11 @@
             </div>
             <!-- Carrito -->
             <div class="mr-2">
-                <a class="navbar-brand " href="{% url 'carrito' %}"><i class="fas fa-shopping-cart text-white"
-                        type="button"></i></i></a>
+
+                <button class="btn comprarButton" type="button" data-toggle="modal"data-target="#comprarModal">
+                    <i class="fas fa-shopping-cart text-white" type="button"></i>
+                </button>
+
             </div>
             <!-- Usuario -->
             {%  if request.user.is_authenticated  %}
